--- a/content/guides/destructuring.adoc
+++ b/content/guides/destructuring.adoc
@@ -387,10 +387,26 @@ If the keys in your map are namespaced keywords, you can also use destructuring 
 (def human {:person/name "Franklin"
             :person/age 25
             :hobby/hobbies "running"})
-(let [{:keys [person/name person/age hobby/hobbies]} human]
+(let [{:keys [hobby/hobbies]
+       :person/keys [name age]} human]
   (println name "is" age "and likes" hobbies))
 ;= Franklin is 25 and likes running
 ----
+
+Destructuring namespaced keywords using `:keys` alone can result in local bindings that clash. Because all map destructuring options can be combined, any local binding form can be defined individually.
+
+[source,clojure]
+----
+(def human {:person/name "Franklin"
+            :person/age 25
+            :hobby/name "running"})
+(let [{:person/keys [age]
+       hobby-name :hobby/name
+       person-name :person/name} human]
+  (println person-name "is" age "and likes" hobby-name))
+;= Franklin is 25 and likes running
+----
+
 
 You can even destructure using auto-resolved keywords, which will again be bound to only the name part of the key:
 
