--- a/content/guides/learn/functions.adoc
+++ b/content/guides/learn/functions.adoc
@@ -298,7 +298,7 @@ Below is a summary of calling conventions for calling into Java from Clojure:
 
 == Test your knowledge
 
-1) Define a function `greet` that takes not arguments and prints "Hello". Replace the ___ with the implementation:
+1) Define a function `greet` that takes no arguments and prints "Hello". Replace the ___ with the implementation:
 `(defn greet [] ___)`
 
 2) Redefine `greet` using `def`, first with the `fn` special form and then with the `#()` reader macro.
