--- a/content/reference/transducers.adoc
+++ b/content/reference/transducers.adoc
@@ -15,7 +15,7 @@ toc::[]
 
 Transducers are composable algorithmic transformations. They are independent from the context of their input and output sources and specify only the essence of the transformation in terms of an individual element. Because transducers are decoupled from input or output sources, they can be used in many different processes - collections, streams, channels, observables, etc. Transducers compose directly, without awareness of input or creation of intermediate aggregates.
 
-Also see the introductory http://blog.cognitect.com/blog/2014/8/6/transducers-are-coming[blog post] and this https://www.youtube.com/watch?v=6mTbuzafcII[video].
+Also see the introductory http://blog.cognitect.com/blog/2014/8/6/transducers-are-coming[blog post], this https://www.youtube.com/watch?v=6mTbuzafcII[video], and this section of the FAQ https://clojure.org/guides/faq#transducers_vs_seqs[about good use cases for transducers].
 
 == Terminology
 
