--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -11,6 +11,14 @@ The official https://github.com/clojure/clojure/blob/master/changes.md[changelog
 
 == Release 1.10
 
+=== 1.10.0-alpha6 (July 4, 2018)
+
+Clojure 1.10.0-alpha6 is now available.
+
+1.10.0-alpha6 includes the following changes since 1.10.0-alpha5:
+
+* https://dev.clojure.org/jira/browse/CLJ-2367[CLJ-2367] - Incorporate fix for ASM regression and add case tests - thanks Sean Corfield for the patch and Daniel Sutton and Ghadi Shayban for the help in tracking it down.
+
 === 1.10.0-alpha5 (June 27, 2018)
 
 Clojure 1.10.0-alpha5 is now available.
