Fix grimoire link

--- a/content/api/api.adoc
+++ b/content/api/api.adoc
@@ -65,7 +65,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 == Other resources
 
-* http://grimoire.arrdem.com/[Grimoire] - community combined cheatsheet + examples
+* https://www.conj.io/[Grimoire] - community combined cheatsheet + examples
 * https://clojuredocs.org[ClojureDocs] - community provided example repository
 * https://crossclj.info/[CrossClj] - library cross-reference
 
