--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -36,7 +36,7 @@ Community:
 * http://www.braveclojure.com/[Clojure for the Brave and True] - a beginner book by Daniel Higginbotham
 * http://aphyr.com/posts/301-clojure-from-the-ground-up-welcome[Clojure from the ground up] - a series of intro articles by Kyle Kingsbury
 * https://github.com/ClojureBridge/curriculum[ClojureBridge Curriculum]
-* http://grimoire.arrdem.com/[Grimoire] - community combined cheatsheet + examples
+* https://www.conj.io/[Grimoire] - community combined cheatsheet + examples
 * https://clojuredocs.org[ClojureDocs] - community provided example repository
 * https://crossclj.info/[CrossClj] - library cross-reference
 * http://clojure-doc.org/[Clojure Documentation] - community-driven documentation site
