update privacy page

--- a/content/privacy.adoc
+++ b/content/privacy.adoc
@@ -27,6 +27,8 @@ We may use anonymous cookies to record non-personal information such as website 
 
 Personal data submitted on this website will be used for the purposes specified in this privacy policy. In addition to the uses identified elsewhere in this privacy policy, we may use your personal information to improve your browsing experience by personalizing the website or send you information (other than marketing communications) which we think may be of interest as well as marketing communications relating to our business. If you wish to opt-out of receiving such communications you may do so by contacting us at <<mailto:privacy@cognitect.com#,privacy@cognitect.com>>.
 
+We work with analytics providers such as Google Analytics, which use cookies and similar technologies to collect and analyze information about traffic to our websites and report on activities, trends, and demographics. You can learn about Google's practices by going to https://www.google.com/policies/privacy/, and opt out of them by downloading the Google Analytics opt-out browser add-on, available at https://tools.google.com/dlpage/gaoptout. You can install third party services to block sharing cookies while browsing websites.
+
 == Using your non-personal data
 
 Non-personal data may be collected and shared with 3rd party services to provide relevant and targeted advertisements through retargeting. All data is anonymous and cannot be used to identify the visitor. Retargeting recognizes that the internet browser has visited the website in the last 90 days. If you would like to not participate in retargeting, you may opt-out by contacting us at <<mailto:privacy@cognitect.com#,privacy@cognitect.com>>.
