--- a/content/reference/compilation.adoc
+++ b/content/reference/compilation.adoc
@@ -31,22 +31,22 @@ The Clojure compilation model preserves as much as possible the dynamic nature o
 ** You generally shouldn't need to use these classes directly, as use, require and load will choose between them and more recent source
 * The loader class is generated for each file referenced when a namespace is compiled, when its loader .class file is older than its source.
 * A stand-alone https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-class[gen-class] facility is provided to create named classes for direct use as Java classes, with facilities for:
-* Naming the generated class
-* Selecting the superclass
-* Specifying any implemented interfaces
-* Specifying constructor signatures
-* Specifying state
-* Declaring additional methods
-* Generating static factory methods
-* Generating main
-* Controlling the mapping to an implementing namespace
-* Exposing inherited protected members
+** Naming the generated class
+** Selecting the superclass
+** Specifying any implemented interfaces
+** Specifying constructor signatures
+** Specifying state
+** Declaring additional methods
+** Generating static factory methods
+** Generating main
+** Controlling the mapping to an implementing namespace
+** Exposing inherited protected members
 ** Generating more than one named class from a single file, with implementations in one or more namespaces
 * An optional https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-class[:gen-class] directive can be used in the https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns[ns] declaration to generate a named class corresponding to a namespace. (:gen-class ...), when supplied, defaults to :name corresponding to the ns name, :main true, :impl-ns same as ns, and :init-impl-ns true. All options of gen-class are supported.
 * gen-class and the :gen-class directive are ignored when not compiling.
 * A stand-alone https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-interface[gen-interface] facility is provided for generating named interface classes for direct use as Java interfaces, with facilities for:
-* Naming the generated interface
-* Specifying any superintefaces
+** Naming the generated interface
+** Specifying any superintefaces
 ** Declaring the signatures of interface methods
 
 == Compiling
