A new Clojure book about using Java libraries

--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70"]
 |===
 
+| image::https://user-images.githubusercontent.com/1059232/45357661-9f48b480-b5cf-11e8-848d-87320fb80710.png[Clojure Extended: Java interop,link="https://leanpub.com/clojure-java-interop/"]
+| https://leanpub.com/clojure-java-interop/[Clojure Extended: Java interop] +
+by Ivan Grishaev +
+Aug 31, 2018
+
 | image::http://ecx.images-amazon.com/images/I/51dqOLcPL7L._SL160.jpg[Getting Clojure,link="https://pragprog.com/book/roclojure/getting-clojure"]
 | https://pragprog.com/book/roclojure/getting-clojure[Getting Clojure] +
 by Russ Olsen +
