Add bit on Companies page about updating by PR with link to the site's repo
Otherwise, the instructions say to email Alex, so people might assume they can't do a PR, or need his approval first.

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -5,7 +5,7 @@ Alex Miller
 :toc: macro
 :icons: font
 
-Below is a partial list of some companies using Clojure or ClojureScript. Most of this information comes from direct contacts, presentations, or other online resources. If you would like to be added or removed from this list, please contact __alex.miller@cognitect.com__.
+Below is a partial list of some companies using Clojure or ClojureScript. Most of this information comes from direct contacts, presentations, or other online resources. If you would like to be added or removed from this list, please contact __alex.miller@cognitect.com__ or submit a pull request to the https://github.com/clojure/clojure-site[site repository].
 
 Also, check out the <<success_stories#,Clojure Success Stories>> and <<community_stories#,Community Stories>> pages!
 
