Add Clojure Polymorphism

--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -37,6 +37,11 @@ Sep 27, 2017
 by Mark McDonnell +
 Aug 23, 2017
 
+| image::https://s3.amazonaws.com/titlepages.leanpub.com/clojurepolymorphism/small[Clojure Polymorphism,link="https://leanpub.com/clojurepolymorphism"]
+| https://leanpub.com/clojurepolymorphism[Clojure Polymorphism] +
+by Paul Stadig +
+Oct 31, 2016
+
 | image::http://ecx.images-amazon.com/images/I/518xLvhHZ1L._SL160.jpg[Web Development with Clojure,link="http://a.co/c2gI4l2"]
 | http://a.co/c2gI4l2[Web Development with Clojure] +
 by Dmitri Sotnikov +
