--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -14,9 +14,9 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * https://github.com/clojure/clojure/blob/master/changes.md[Changelog]
 * Requirements: Java 1.6+ (recommended: Java 1.8+)
 
-== Development Release: 1.10.0-alpha9 (Oct 4, 2018)
+== Development Release: 1.10.0-beta1 (Oct 5, 2018)
 
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.0-alpha9/[Clojure 1.10.0-alpha9]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.0-alpha9/[Clojure 1.10.0-beta1]
 * https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.10.0*[Clojure 1.10 pre-release builds]
 * <<devchangelog#,Dev changelog>>
 * Requirements: Java 1.8+
