--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -11,6 +11,10 @@ The official https://github.com/clojure/clojure/blob/master/changes.md[changelog
 
 == Release 1.10
 
+=== 1.10.0-RC1 (Oct 11, 2018)
+
+1.10.0-RC1 is the same code as 1.10.0-beta2 (just minor changelog updates).
+
 === 1.10.0-beta2 (Oct 9, 2018)
 
 1.10.0-beta2 includes the following changes since 1.10.0-beta1:
